--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "bootstrap": "^5.2.0",
+    "react-router-dom": "^6.8.2",
+    "switch": "^0.0.0"
   }
 }
